# godot-audio-analyzer

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
code/: CMakeLists.txt
code/include/: audio_analyzer.h  gd_audio_analyzer.h
code/src/: audio_analyzer.cpp  gd_audio_analyzer.cpp  register_types.cpp
godot/: default_env.tres  guess_the_sound.tscn  main.tscn  project.godot
godot/addons/gd_audio_analyzer/: library.gdextension
godot/scenes/: Settings.tscn  gd_audio_analyzer.tscn  guess_the_sound.tscn  main.tscn
godot/scripts/: gd_audio_analyzer.gd  guess_the_sound.gd  main.gd  settings.gd
templates/: template.release.gdextension.in
